--- a/www/templates/providers.html
+++ b/www/templates/providers.html
@@ -18,7 +18,7 @@
     </div>
     <div class="row">
       <div class="col col-100">
-        <a href="#/app/options-by-providers/Sky & Cable">
+        <a class="disabled" href="#/app/options-by-providers/Sky & Cable">
           <img src="../img/sky_icon.jpeg">
         </a>                
       </div>      
