--- a/www/templates/tvcontents.html
+++ b/www/templates/tvcontents.html
@@ -3,9 +3,11 @@
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
   <ion-content class="has-header">
-     <a ng-repeat="tvContent in tvContents" class="item" ng-class="{'tv-content-passed':tvContent.passed}"  href="#/app/details/{{tvContent.id}}/{{tvContent.type}}">
-          
-          <div class="row">
+    <ion-list delayed-scroll scroll-to="{{scrollTo}}" total-items="{{totalItems}}">
+     <a id="{{$index}}" ng-repeat="tvContent in tvContents" class="item" ng-class="{'tv-content-passed':tvContent.passed}"  href="#/app/details/{{tvContent.id}}/{{tvContent.type}}">
+          {{tvContent.title}}
+          {{tvContents.length}}
+      <!--     <div class="row">
             <div class="col col-33">
               <img ng-src="http://beta.tvlive.io{{tvContent.channelImageURL}}" alt="{{tvContent.channel}}">          
               <p><small>{{tvContent.st}} - {{tvContent.et}}</small></p>                        
@@ -27,8 +29,9 @@
                   <progress max="100" value="{{tvContent.perCentTimeElapsed}}"></progress>
                 </div>                                            
             </div>
-          </div>  
+          </div>   -->
    </a>    
+ </ion-list>
   </ion-content>
   <ion-footer-bar align-title="center" class="bar-assertive">
     <h1 class="title">Prototype</h1>
