--- a/www/css/style.css
+++ b/www/css/style.css
@@ -29,7 +29,7 @@ border: dashed;
 
 .span-film {
 	text-align: center;
-	background-color: #2EFE9A;
+	background-color: #A9F5D0;
 	color: #ffffff;
 	font-weight: 500;
 	padding: 3px 55px;		
@@ -53,7 +53,7 @@ border: dashed;
 }
 
 .tv-content-passed {
-	background-color: #BDBDBD;
+	background-color: #E6E6E6;
 }
 
 a.disabled {
