close #5 - Change 'prototype' for 'beta'

--- a/www/templates/tvcontents.html
+++ b/www/templates/tvcontents.html
@@ -31,6 +31,6 @@
    </a>    
   </ion-content>
   <ion-footer-bar align-title="center" class="bar-assertive">
-    <h1 class="title">Prototype</h1>
+    <h1 class="title">Beta</h1>
   </ion-footer-bar>
 </ion-view>
