--- a/www/templates/channels.html
+++ b/www/templates/channels.html
@@ -23,7 +23,7 @@
     </div>      
   </ion-content>
   <ion-footer-bar align-title="center" class="bar-assertive">
-    <h1 class="title">Prototype</h1>
+    <h1 class="title">Beta</h1>
   </ion-footer-bar>
 </ion-view>
 
