--- a/www/templates/tvcontents-now.html
+++ b/www/templates/tvcontents-now.html
@@ -1,11 +1,11 @@
-<ion-view title="On TV">
+<ion-view title="{{type}} on TV">
   <ion-nav-buttons side="left">
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
     <ion-content class="has-header">
      <div class="row" ng-show="error">
             <div class="col">
-              <h3>No content available</h3>                      
+              <h3>No {{type}} right now on the TV</h3>                      
             </div>    
       </div>  
       <ion-list delayed-scroll scroll-to="{{data.scrollTo}}" total-items="{{data.totalItems}}">      
@@ -16,15 +16,6 @@
                 <p><small>{{tvContent.st}} - {{tvContent.et}}</small></p>                        
               </div>    
               <div class="col col-66">
-                  <div ng-show="tvContent.type == 'Series'">
-                    <span class="span-series">{{tvContent.type}}</span>          
-                  </div>  
-                  <div ng-show="tvContent.type == 'Program'">
-                    <span class="span-program">{{tvContent.type}}</span>          
-                  </div>  
-                  <div ng-show="tvContent.type == 'Film'">
-                    <span class="span-film">{{tvContent.type}}</span>          
-                  </div>
                   <div>
                     <h3 class="content-title">{{tvContent.title}}</h3>           
                   </div>
