--- a/www/templates/tvcontents-now.html
+++ b/www/templates/tvcontents-now.html
@@ -1,8 +1,11 @@
-<ion-view title="{{type}} on TV">
+<ion-view title="on TV">
   <ion-nav-buttons side="left">
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
-    <ion-content class="has-header">
+  <ion-header-bar  class="bar bar-subheader bar-positive">
+           <h1 class="title">{{type}}</h1>
+  </ion-header-bar>
+    <ion-content class="has-header has-subheader">
      <div class="row" ng-show="error">
             <div class="col">
               <h3>No {{type}} right now on the TV</h3>                      
