--- a/www/templates/tvcontents.html
+++ b/www/templates/tvcontents.html
@@ -1,4 +1,4 @@
-<ion-view title="On TV">
+<ion-view title="TV Content">
   <ion-nav-buttons side="left">
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
