--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,14 +1,15 @@
 <ion-side-menus>
-
   <ion-pane ion-side-menu-content>
     <ion-nav-bar class="bar-stable bar-dark nav-title-slide-ios7"> 
       <ion-nav-back-button class="button-clear"><i class="icon ion-ios7-arrow-back"></i> Back</ion-nav-back-button>
     </ion-nav-bar>
     <ion-nav-view name="menuContent" animation="slide-left-right"></ion-nav-view>
+    <ion-nav-buttons side="right">
+            <button menu-toggle="right" class="button button-icon icon ion-navicon"></button>
+    </ion-nav-buttons>
   </ion-pane>
-
-  <ion-side-menu side="left">
-    <header class="bar bar-header bar-dark">
+  <ion-side-menu side="right" is-enabled="true">
+          <header class="bar bar-header bar-dark">
       <h1 class="title">Menu</h1>
     </header>
     <ion-content class="has-header">
@@ -18,5 +19,5 @@
         </ion-item>
       </ion-list>
     </ion-content>
-  </ion-side-menu>
+        </ion-side-menu>
 </ion-side-menus>
