--- a/www/templates/tvcontents-now.html
+++ b/www/templates/tvcontents-now.html
@@ -1,4 +1,4 @@
-<ion-view title="{{type}}">
+<ion-view title="{{title}}">
     <ion-content class="has-header">
      <div ng-show="error"> 
       <div class="row">
