--- a/www/templates/providers.html
+++ b/www/templates/providers.html
@@ -1,4 +1,4 @@
-<ion-view title="Choose a TV Provider">
+<ion-view title="TV Provider">
   <ion-content class="has-header">
     <!-- <div class="list">
       <a ng-repeat="provider in providers"  class="item item-icon-left" href="#/app/options-by-providers/{{provider.name}}">
