32 - Refactor the model adding episode inside of series

--- a/www/templates/details-film.html
+++ b/www/templates/details-film.html
@@ -15,8 +15,8 @@
             </div>
     </div>  
     <div class="row">
-      <div ng-show="details.film.description" class="col content-description">  
-        <h5>{{details.film.description}}</h5>
+      <div ng-show="details.film.plot" class="col content-description">  
+        <h5>{{details.film.plot}}</h5>
         <span ng-show="details.film.year" class="item-note"> 
           {{details.film.year}}
       </span>
