--- a/www/templates/details-program.html
+++ b/www/templates/details-program.html
@@ -15,8 +15,8 @@
             </div>
     </div>  
     <div class="row">
-      <div ng-show="details.program.description" class="col content-description">  
-      <h5>{{details.program.description}}</h5>
+      <div ng-show="details.program.plot" class="col content-description">  
+      <h5>{{details.program.plot}}</h5>
     </div>
     </div>
   </div>
