--- a/www/templates/tvcontents-now.html
+++ b/www/templates/tvcontents-now.html
@@ -33,6 +33,9 @@
                       </p>
                     </div>
                   </div>
+                   <div ng-show="tvContent.rating">
+                    <small>{{tvContent.rating}}</small>
+                  </div>
                   <div ng-show="tvContent.perCentTimeElapsed" class="progress-bar" focus="true">
                     <progress max="100" value="{{tvContent.perCentTimeElapsed}}"></progress>
                   </div>                                            
