34 - <div ng-show=tvContent.rating>

--- a/www/templates/tvcontents-now.html
+++ b/www/templates/tvcontents-now.html
@@ -34,7 +34,7 @@
                     </div>
                   </div>
                    <div ng-show="tvContent.rating">
-                    <small>{{tvContent.rating}}</small>
+                    <i class="icon ion-star energized"></i><small>{{tvContent.rating}}</small>
                   </div>
                   <div ng-show="tvContent.perCentTimeElapsed" class="progress-bar" focus="true">
                     <progress max="100" value="{{tvContent.perCentTimeElapsed}}"></progress>
