--- a/www/templates/tvcontents.html
+++ b/www/templates/tvcontents.html
@@ -36,8 +36,8 @@
                       </p>
                     </div>
                   </div>
-                  <div ng-show="tvContent.rating">
-                    <small>{{tvContent.rating}}</small>
+                   <div ng-show="tvContent.rating">
+                    <i class="icon ion-star energized"></i><small>{{tvContent.rating}}</small>
                   </div>
                   <div ng-show="tvContent.perCentTimeElapsed" class="progress-bar" focus="true">
                     <progress max="100" value="{{tvContent.perCentTimeElapsed}}"></progress>
