44 - Adapt to absolute urls in the API

--- a/www/templates/channels.html
+++ b/www/templates/channels.html
@@ -4,17 +4,17 @@
 
       <div class="col col-33">
         <a href="#/app/tvcontents/today/{{channels[$index].name}}" >
-          <img src="{{channels[$index].icon}}" alt="{{channels[$index].name}}">
+          <img src="{{channels[$index].image}}" alt="{{channels[$index].name}}">
         </a>        
       </div>      
        <div class="col col-33">
         <a href="#/app/tvcontents/today/{{channels[$index+1].name}}" >
-          <img src="{{channels[$index+1].icon}}" alt="{{channels[$index+1].name}}">
+          <img src="{{channels[$index+1].image}}" alt="{{channels[$index+1].name}}">
         </a>        
       </div>      
        <div class="col col-33">
         <a href="#/app/tvcontents/today/{{channels[$index+2].name}}" >
-          <img src="{{channels[$index+2].icon}}" alt="{{channels[$index+2].name}}">
+          <img src="{{channels[$index+2].image}}" alt="{{channels[$index+2].name}}">
         </a>        
       </div>      
     </div>      
