--- a/www/templates/details-program.html
+++ b/www/templates/details-program.html
@@ -2,7 +2,7 @@
   <ion-content class="has-header">
     <div class="row">
             <div class="col col-33">
-              <img ng-src="http://beta.tvlive.io{{details.channelImageURL}}" alt="{{details.channel}}">          
+              <img ng-src="{{details.channelImageURL}}" alt="{{details.channel}}">          
               <p><small>{{details.st}} - {{details.et}}</small></p>                        
             </div>    
             <div class="col col-66">
