--- a/www/templates/details-series.html
+++ b/www/templates/details-series.html
@@ -2,7 +2,7 @@
 <ion-content class="has-header">
     <div class="row">
             <div class="col col-33">
-              <img ng-src="{{details.channelImageURL}}" alt="{{details.channel}}">          
+              <img ng-src="{{details.series.poster}}&h=150">                        
               <p><small>{{details.st}} - {{details.et}}</small></p>                        
             </div>    
             <div class="col col-66">
@@ -13,11 +13,12 @@
 
                 <div ng-show="details.perCentTimeElapsed" class="progress-bar">
                   <progress max="100" value="{{details.perCentTimeElapsed}}"></progress>
+                  <img ng-src="{{details.channelImageURL}}" alt="{{details.channel}}">          
                 </div>                                            
             </div>
     </div>  
     <div class="row">
-      <div ng-show="details.series.episode.episodePlot" class="col content-description">  
+      <div ng-show="details.series.episode.episodePlot" class="col">  
         <h5>{{details.series.episode.episodePlot}}</h5>
       </div>
     </div>
